[package]
name = "grokdb"
version = "0.1.0"
authors = ["Alberto Leal <mail4alberto@gmail.com>"]

license = "MIT"

[dependencies.rand]
version = "0.3"

[dependencies.chrono]
version = "0.2"

[dependencies.libc]
version = "0.2"

[dependencies.clap]
version = "1.4"

[dependencies.rusqlite]
git = "https://github.com/Dashed/rusqlite"
rev = "babbb29757bcf512b90385dcce8397585650cae8"
features = ["named_params", "functions", "backup"]

[dependencies.libsqlite3-sys]
git = "https://github.com/Dashed/rusqlite"
rev = "babbb29757bcf512b90385dcce8397585650cae8"
path = "libsqlite3-sys"
version = "0.2.0"

[dependencies.rustc-serialize]
version = "0.3"

[dependencies.iron]
version = "0.2"

# iron plugins
[dependencies.mount]
version = "0"

[dependencies.staticfile]
version = "0"

[dependencies.logger]
version = "0"

[dependencies.router]
version = "0.1"

[dependencies.bodyparser]
version = "0"

[dependencies.urlencoded]
git = "https://github.com/iron/urlencoded"
rev = "58468f45cd48000f68dc12ffb142b443ae7edc48"

