[package]
name = "grokdb"
version = "0.1.0"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]

license = "MIT"

[dependencies.regex]
version = "0.1"

[dependencies.rand]
version = "0.3"

[dependencies.chrono]
version = "0.2"

[dependencies.libc]
version = "0.2"

[dependencies.clap]
version = "1.4"

[dependencies.rusqlite]
version = "0.6"
features = ["functions", "backup"]

[dependencies.rustc-serialize]
version = "0.3"

[dependencies.iron]
version = "0.2"

# iron plugins
[dependencies.mount]
version = "0"

[dependencies.staticfile]
version = "0"

[dependencies.logger]
# version = "0"
git = "https://github.com/iron/logger"
rev = "78c20cbda030a03107fec91b5282183d6eee9997"

[dependencies.router]
version = "0.1"

[dependencies.bodyparser]
version = "0"

[dependencies.urlencoded]
version = "0.2"
